--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -94,3 +94,14 @@ body {
     transform: rotate(360deg);
   }
 }
+
+input[type=number] {
+  -moz-appearance: textfield;
+}
+
+input[type=number]::-webkit-inner-spin-button, 
+input[type=number]::-webkit-outer-spin-button { 
+  -webkit-appearance: none;
+  margin: 0; 
+}
+
